style: update global styles with new background color and prevent horizontal overflow; adjust margin in MainContentSection for better layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,8 @@
    body {
       margin: 0px;
       height: 100%;
+      background-color: var(--blackblack);
+      overflow-x: hidden;
    }
    a {
       text-decoration: none;
@@ -113,9 +115,6 @@
    --saira-cond-display-letter-spacing: 0px;
    --saira-cond-display-line-height: 88.80000114440918%;
    --yellow: rgba(240, 231, 77, 1);
-}
-
-:root {
    --animate-spin: spin 1s linear infinite;
 }
 
